Fixed layout problems on IE Mobile

--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -5,7 +5,7 @@
 }
 
 .site__content {
-  flex: 1;
+  flex-grow: 1;
 }
 
 .site__content,
@@ -35,42 +35,29 @@
   // let sidebars share a row
   // but if only one exists, it can stretch across
   .sidebar {
-    flex: 1 49%;
-
-    // enforce a margin when both exist
-    & + & {
-      margin-left: 2%;
-    }
+    flex-basis: 49%;
+    flex-grow: 1;
   }
 }
 
 @media (min-width: 920px) {
   .one-sidebar .primary-content {
     max-width: 75%;
-    flex: 0 75%;
+    flex-basis: 75%;
   }
 
   .two-sidebars .primary-content {
     max-width: 50%;
-    flex: 0 50%;
+    flex-basis: 50%;
   }
 
   .sidebar {
-    flex: 0 25%;
-
-    // clear the margin between the sidebars
-    & + & {
-      margin-left: 0;
-    }
+    flex-grow: 0;
+    flex-basis: 24%;
   }
 
   .sidebar-left {
     order: -1;
-    padding-right: $base-spacing;
-  }
-
-  .sidebar-right {
-    padding-left: $base-spacing;
   }
 }
 
