--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-/*!
+/*
  * inuitcss, by @csswizardry
  *
  * github.com/inuitcss | inuitcss.com
@@ -555,9 +555,9 @@ tr {
 
 .site__content {
   -webkit-box-flex: 1;
-  -webkit-flex: 1;
-  -ms-flex: 1;
-  flex: 1; }
+  -webkit-flex-grow: 1;
+  -ms-flex-positive: 1;
+  flex-grow: 1; }
 
 .site__content,
 .site__header {
@@ -593,41 +593,38 @@ tr {
 
 @media (min-width: 500px) {
   .sidebar {
+    -webkit-flex-basis: 49%;
+    -ms-flex-preferred-size: 49%;
+    flex-basis: 49%;
     -webkit-box-flex: 1;
-    -webkit-flex: 1 49%;
-    -ms-flex: 1 49%;
-    flex: 1 49%; }
-    .sidebar + .sidebar {
-      margin-left: 2%; } }
+    -webkit-flex-grow: 1;
+    -ms-flex-positive: 1;
+    flex-grow: 1; } }
 
 @media (min-width: 920px) {
   .one-sidebar .primary-content {
     max-width: 75%;
-    -webkit-box-flex: 0;
-    -webkit-flex: 0 75%;
-    -ms-flex: 0 75%;
-    flex: 0 75%; }
+    -webkit-flex-basis: 75%;
+    -ms-flex-preferred-size: 75%;
+    flex-basis: 75%; }
   .two-sidebars .primary-content {
     max-width: 50%;
-    -webkit-box-flex: 0;
-    -webkit-flex: 0 50%;
-    -ms-flex: 0 50%;
-    flex: 0 50%; }
+    -webkit-flex-basis: 50%;
+    -ms-flex-preferred-size: 50%;
+    flex-basis: 50%; }
   .sidebar {
     -webkit-box-flex: 0;
-    -webkit-flex: 0 25%;
-    -ms-flex: 0 25%;
-    flex: 0 25%; }
-    .sidebar + .sidebar {
-      margin-left: 0; }
+    -webkit-flex-grow: 0;
+    -ms-flex-positive: 0;
+    flex-grow: 0;
+    -webkit-flex-basis: 24%;
+    -ms-flex-preferred-size: 24%;
+    flex-basis: 24%; }
   .sidebar-left {
     -webkit-box-ordinal-group: 0;
     -webkit-order: -1;
     -ms-flex-order: -1;
-    order: -1;
-    padding-right: 1.5rem; }
-  .sidebar-right {
-    padding-left: 1.5rem; } }
+    order: -1; } }
 
 /* Fallbacks for old brwosers, desktop only */
 .no-flexbox .content-wrapper {
@@ -1011,6 +1008,25 @@ ul.tabs {
 
 .bus-number {
   width: 5em; }
+
+.review-list {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  overflow: hidden;
+  list-style: none;
+  padding-left: 0; }
+
+.review-list__item {
+  float: left;
+  margin-right: 1em; }
+
+.review-list__item a {
+  display: block;
+  padding: 1em 0.5em;
+  border-radius: 3px;
+  border: 1px solid; }
 
 .site__slogan {
   font-style: italic;
